renamed tutorial to test

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1066,7 +1066,7 @@ table {
 
     <li class="set"><h3><a href="#header-submodules">Sub-modules</a></h3>
       <ul>
-        <li class="mono"><a href="tutorial.m.html">precession.tutorial</a></li>
+        <li class="mono"><a href="test.m.html">precession.test</a></li>
       </ul>
     </li>
     </ul>
@@ -1085,7 +1085,7 @@ table {
 <p><strong>email</strong> d.gerosa@damtp.cam.ac.uk</p>
 <p><strong>Copyright</strong> Copyright (C) 2015 Davide Gerosa</p>
 <p><strong>Licence</strong> CC by-nc-sa 3.0</p>
-<p><strong>Version</strong> 0.0.0.21</p>
+<p><strong>Version</strong> 0.0.0.22</p>
 <h1>DYNAMICS OF PRECESSING BLACK-HOLE BINARIES</h1>
 <p>Detailed documentation and results from the code are available at:</p>
 <ul>
@@ -1305,7 +1305,7 @@ __author__ = "Davide Gerosa"
 __email__ = "d.gerosa@damtp.cam.ac.uk"
 __copyright__ = "Copyright (C) 2015 Davide Gerosa"
 __license__ = "CC by-nc-sa 3.0"
-__version__ = "0.0.0.21"
+__version__ = "0.0.0.22"
 
 
 __doc__="**Author** "+__author__+"\n\n"+\
@@ -11941,9 +11941,12 @@ is simply checks -1&lt;cos(theta_i)&lt;1.</p>
 
     <h2 class="section-title" id="header-submodules">Sub-modules</h2>
       <div class="item">
-      <p class="name"><a href="tutorial.m.html">precession.tutorial</a></p>
+      <p class="name"><a href="test.m.html">precession.test</a></p>
       
   
+    <div class="desc"><h1>DYNAMICS OF PRECESSING BLACK-HOLE BINARIES</h1>
+<p>precession.test is a submodule containing various tests to illustate the features of precession.</p>
+<p>PUT MORE MORE</p></div>
 
       </div>
   </section>
