generate_documentation.sh

--- a/precession/index.html
+++ b/precession/index.html
@@ -4112,7 +4112,7 @@ the algorithms.</p>
 <span class="k">def</span> <span class="nf">evolve_angles_single</span><span class="p">(</span><span class="n">theta1_i</span><span class="p">,</span><span class="n">theta2_i</span><span class="p">,</span><span class="n">deltaphi_i</span><span class="p">,</span><span class="n">r_vals</span><span class="p">,</span><span class="n">q</span><span class="p">,</span><span class="n">S1</span><span class="p">,</span><span class="n">S2</span><span class="p">):</span>
 
     <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">    Auxiliary function, see `evolve_angles`.</span>
+<span class="sd">    Auxiliary function, see `precession.evolve_angles`.</span>
 
 <span class="sd">    **Call:**</span>
 
@@ -8897,7 +8897,7 @@ first output separation (this is a scalar).</p>
 
     
   
-    <div class="desc"><p>Auxiliary function, see <code>evolve_angles</code>.</p>
+    <div class="desc"><p>Auxiliary function, see <a href="#precession.evolve_angles"><code>evolve_angles</code></a>.</p>
 <p><strong>Call:</strong></p>
 <div class="codehilite"><pre>savename=precession.evolve_angles(theta1_i,theta2_i,deltaphi_i,r_vals,q,S1,S2)
 </pre></div>
@@ -8923,7 +8923,7 @@ first output separation (this is a scalar).</p>
     <div class="codehilite"><pre><span class="k">def</span> <span class="nf">evolve_angles_single</span><span class="p">(</span><span class="n">theta1_i</span><span class="p">,</span><span class="n">theta2_i</span><span class="p">,</span><span class="n">deltaphi_i</span><span class="p">,</span><span class="n">r_vals</span><span class="p">,</span><span class="n">q</span><span class="p">,</span><span class="n">S1</span><span class="p">,</span><span class="n">S2</span><span class="p">):</span>
 
     <span class="sd">&#39;&#39;&#39;</span>
-<span class="sd">    Auxiliary function, see `evolve_angles`.</span>
+<span class="sd">    Auxiliary function, see `precession.evolve_angles`.</span>
 
 <span class="sd">    **Call:**</span>
 
