new timing example

--- a/precession/index.html
+++ b/precession/index.html
@@ -1179,8 +1179,8 @@ installed through pip:</p>
 </pre></div>
 
 
-<p>Prerequisites are <code>numpy</code>, <code>scipy</code> and <code>parmap</code>. All can be installed through
-pip.</p>
+<p>Prerequisites are <code>numpy</code>, <code>scipy</code> and <code>parmap</code>, which can be all installed
+through pip.</p>
 <h3>THINGS TO KEEP IN MIND</h3>
 <ol>
 <li>
@@ -1268,10 +1268,9 @@ Please, report bugs to</p>
 
 
 <p>I'm happy to help you out! </p>
-<p>I'd like to thank E.
-Berti, M. Kesden, U. Sperhake, R. O'Shaughnessy, D. Trifiro' and J. Vosmera for
-the help receiving in interpreting the physical results and implementing some of
-the algorithms.</p>
+<p>I'd like to thank E. Berti, M. Kesden, U. Sperhake, R. O'Shaughnessy, D.
+Trifiro' and J. Vosmera for the help received in interpreting the physical
+results and implementing some of the algorithms.</p>
   
   <p class="source_link"><a href="javascript:void(0);" onclick="toggle('source-precession', this);">Show source &equiv;</a></p>
   <div id="source-precession" class="source">
@@ -1300,8 +1299,8 @@ the algorithms.</p>
 
 <span class="sd">    pip install precession</span>
 
-<span class="sd">Prerequisites are `numpy`, `scipy` and `parmap`. All can be installed through</span>
-<span class="sd">pip.</span>
+<span class="sd">Prerequisites are `numpy`, `scipy` and `parmap`, which can be all installed</span>
+<span class="sd">through pip.</span>
 
 
 <span class="sd">### THINGS TO KEEP IN MIND</span>
@@ -1379,10 +1378,9 @@ the algorithms.</p>
 
 <span class="sd">I&#39;m happy to help you out! </span>
 
-<span class="sd">I&#39;d like to thank E.</span>
-<span class="sd">Berti, M. Kesden, U. Sperhake, R. O&#39;Shaughnessy, D. Trifiro&#39; and J. Vosmera for</span>
-<span class="sd">the help receiving in interpreting the physical results and implementing some of</span>
-<span class="sd">the algorithms.</span>
+<span class="sd">I&#39;d like to thank E. Berti, M. Kesden, U. Sperhake, R. O&#39;Shaughnessy, D.</span>
+<span class="sd">Trifiro&#39; and J. Vosmera for the help received in interpreting the physical</span>
+<span class="sd">results and implementing some of the algorithms.</span>
 <span class="sd">&#39;&#39;&#39;</span>
 
 <span class="n">__author__</span> <span class="o">=</span> <span class="s">&quot;Davide Gerosa&quot;</span>
@@ -13409,7 +13407,11 @@ is simply checks -1&lt;cos(theta_i)&lt;1.</p>
       <p class="name"><a href="test/index.html">precession.test</a></p>
       
   
-    <div class="desc"><p>PLEASE WRITE ME</p></div>
+    <div class="desc"><p>This submodule provides practical examples to illustrate the main features of <code>precession</code>. Examples are illustrated in </p>
+<p>ADD REFERENCE TO CODE PAPER HERE!</p>
+<p>This submodule has to be loaded separately typing</p>
+<div class="codehilite"><pre><span class="kn">import</span> <span class="nn">precession.test</span>
+</pre></div></div>
 
       </div>
   </section>
