--- a/precession/index.html
+++ b/precession/index.html
@@ -1157,21 +1157,23 @@ table {
 <p><strong>email</strong> d.gerosa@damtp.cam.ac.uk</p>
 <p><strong>Copyright</strong> Copyright (C) 2015 Davide Gerosa</p>
 <p><strong>Licence</strong> CC by-nc-sa 3.0</p>
-<p><strong>Version</strong> 0.0.0.35</p>
+<p><strong>Version</strong> 0.0.0.36</p>
 <h1>DYNAMICS OF PRECESSING BLACK-HOLE BINARIES</h1>
 <p>Detailed documentation and results from the code are available at:</p>
 <ul>
 <li><a href="www.damtp.cam.ac.uk/user/dg438/spinprecession">www.damtp.cam.ac.uk/user/dg438/spinprecession</a> </li>
 <li><a href="www.davidegerosa.com/spinprecession">www.davidegerosa.com/spinprecession</a></li>
 </ul>
-<p>This code is released to the community under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0">Creative Commons
-attribution-noncommercial-sharealike
-license</a>. Essentially, you may
-use <code>precession</code>, but must make reference to our work, and you must not use it
-for commercial purposes. Any code where precession is used, must be released
-under the same licence.  When using precession in any published work, you must
-cite the papers describing its implementation:</p>
+<p>This code is released to the community under the <a href="http://creativecommons.org/licenses/by/4.0">Creative Commons Attribution
+4.0 International license</a>.
+Essentially, you may use <code>precession</code> as you like but must make reference to
+our work. When using precession in any published work, please cite the paper
+describing its implementation:</p>
 <p>ADD REFERENCE TO CODE PAPER HERE!</p>
+<p><code>precession</code> is an open-source code distributed under git version-control system on</p>
+<p><a href="github.com/dgerosa/precessions">github.com/dgerosa/precession</a></p>
+<p>API documentation can be generated automatically in html format from the code docstrings using pdoc, and is is uplodad in a dedicated branch of the git repository</p>
+<p><a href="dgerosa.github.io/precession">dgerosa.github.io/precession</a></p>
 <h3>INSTALLATION</h3>
 <p><code>precession</code> works in python 2.x and has been tested on 2.7.10. It can be
 installed through pip:</p>
@@ -1282,15 +1284,22 @@ results and implementing some of the algorithms.</p>
 <span class="sd">- [www.damtp.cam.ac.uk/user/dg438/spinprecession](www.damtp.cam.ac.uk/user/dg438/spinprecession) </span>
 <span class="sd">- [www.davidegerosa.com/spinprecession](www.davidegerosa.com/spinprecession)</span>
 
-<span class="sd">This code is released to the community under the [Creative Commons</span>
-<span class="sd">attribution-noncommercial-sharealike</span>
-<span class="sd">license](http://creativecommons.org/licenses/by-nc-sa/3.0). Essentially, you may</span>
-<span class="sd">use `precession`, but must make reference to our work, and you must not use it</span>
-<span class="sd">for commercial purposes. Any code where precession is used, must be released</span>
-<span class="sd">under the same licence.  When using precession in any published work, you must</span>
-<span class="sd">cite the papers describing its implementation:</span>
+<span class="sd">This code is released to the community under the [Creative Commons Attribution</span>
+<span class="sd">4.0 International license](http://creativecommons.org/licenses/by/4.0).</span>
+<span class="sd">Essentially, you may use `precession` as you like but must make reference to</span>
+<span class="sd">our work. When using precession in any published work, please cite the paper</span>
+<span class="sd">describing its implementation:</span>
 
 <span class="sd">ADD REFERENCE TO CODE PAPER HERE!</span>
+
+<span class="sd">`precession` is an open-source code distributed under git version-control system on</span>
+
+<span class="sd">[github.com/dgerosa/precession](github.com/dgerosa/precessions)</span>
+
+<span class="sd">API documentation can be generated automatically in html format from the code docstrings using pdoc, and is is uplodad in a dedicated branch of the git repository</span>
+
+<span class="sd">[dgerosa.github.io/precession](dgerosa.github.io/precession)</span>
+
 
 <span class="sd">### INSTALLATION</span>
 <span class="sd"> </span>
@@ -1387,7 +1396,7 @@ results and implementing some of the algorithms.</p>
 <span class="n">__email__</span> <span class="o">=</span> <span class="s">&quot;d.gerosa@damtp.cam.ac.uk&quot;</span>
 <span class="n">__copyright__</span> <span class="o">=</span> <span class="s">&quot;Copyright (C) 2015 Davide Gerosa&quot;</span>
 <span class="n">__license__</span> <span class="o">=</span> <span class="s">&quot;CC by-nc-sa 3.0&quot;</span>
-<span class="n">__version__</span> <span class="o">=</span> <span class="s">&quot;0.0.0.35&quot;</span>
+<span class="n">__version__</span> <span class="o">=</span> <span class="s">&quot;0.0.0.36&quot;</span>
 
 
 <span class="n">__doc__</span><span class="o">=</span><span class="s">&quot;**Author** &quot;</span><span class="o">+</span><span class="n">__author__</span><span class="o">+</span><span class="s">&quot;</span><span class="se">\n\n</span><span class="s">&quot;</span><span class="o">+</span>\
