--- a/precession/index.html
+++ b/precession/index.html
@@ -1143,6 +1143,11 @@ table {
     </li>
 
 
+    <li class="set"><h3><a href="#header-submodules">Sub-modules</a></h3>
+      <ul>
+        <li class="mono"><a href="test/index.html">precession.test</a></li>
+      </ul>
+    </li>
     </ul>
   </div>
 
@@ -1219,7 +1224,7 @@ built-in help system</p>
 </pre></div>
 
 
-<p>Several tests and tutorial are available in the submodule <code>precession.test</code>. A
+<p>Several tests and tutorial are available in the submodule <a href="test/index.html"><code>precession.test</code></a>. A
 detailed description of the functionalies of the code is provided in the
 scientific paper <a href="https://arxiv.org/abs/1605.01067">arXiv:1605.01067</a>, where
 examples are also presented.</p>
@@ -13913,6 +13918,20 @@ is simply checks -1&lt;cos(theta_i)&lt;1.</p>
   
 
 
+    <h2 class="section-title" id="header-submodules">Sub-modules</h2>
+      <div class="item">
+      <p class="name"><a href="test/index.html">precession.test</a></p>
+      
+  
+    <div class="desc"><p>This submodule provides practical examples to illustrate the main features of
+<code>precession</code>. Examples are illustrated in </p>
+<ul>
+<li><em>Precession. Dynamics of spinning black-hole binaries with Python.</em> 
+D. Gerosa, M. Kesden. <a href="https://arxiv.org/abs/1605.01067">arXiv:1605.01067</a></li>
+</ul>
+<p>This submodule has to be loaded...</p></div>
+
+      </div>
   </section>
 
     </article>
