--- a/precession/test/index.html
+++ b/precession/test/index.html
@@ -1081,7 +1081,7 @@ table {
 <code>precession</code>. Examples are illustrated in </p>
 <ul>
 <li><em>Precession. Dynamics of spinning black-hole binaries with Python.</em> 
-Davide Gerosa. Submitted to... arXiv:...</li>
+D. Gerosa, M. Kesden. <a href="https://arxiv.org/abs/1605.01067">arXiv:1605.01067</a></li>
 </ul>
 <p>This submodule has to be loaded separately:</p>
 <div class="codehilite"><pre><span></span><span class="kn">import</span> <span class="nn">precession.test</span>
@@ -1094,7 +1094,7 @@ Davide Gerosa. Submitted to... arXiv:...</li>
 <span class="sd">`precession`. Examples are illustrated in </span>
 
 <span class="sd">- *Precession. Dynamics of spinning black-hole binaries with Python.* </span>
-<span class="sd">Davide Gerosa. Submitted to... arXiv:...</span>
+<span class="sd">D. Gerosa, M. Kesden. [arXiv:1605.01067](https://arxiv.org/abs/1605.01067)</span>
 
 <span class="sd">This submodule has to be loaded separately:</span>
 
